# bck-ydjs08-tradingbot

./: .gitignore  CONVENTIONs.md  INSTR.md  INSTRUCTIONs.md  LICENSE  README.md  TODO.md  TODOs.md  app.py  dev.bat  gmailproxy.py  main.py  main_bck.py  market_report_template.html  pyproject.toml
.gemini/: TODOs.md
alpaca/: core.py
alphavi/: __init__.py  __main__.py  endpoints.py  framework.py  models.py
alphavi/alpaca/: __init__.py  alpaca_service.py
alphavi/bumblebee/: template_trading_bot.py
alphavi/fmp/: __init__.py  (+1 more)
alphavi_needs_refactor/: __main__.py  models.py
alphavi_util/: __init__.py  core.py  est_timer.py
bumblebee/: bot.py  models.py
core/: __main__.py  analysis_report.py  models.py  stock_metrics.py
docs/: alpaca-PDT.tex  alpaca-lending.tex  metrics.tex  override.tex
log_alpaca/: alpaca_account.json  alpaca_account_activities_DIV.json  alpaca_account_activities_FEE.json  alpaca_account_activities_FILL.json  alpaca_account_activities_INT.json  alpaca_account_activities_JNLC.json  alpaca_orders_status_accepted.json  alpaca_positions.json
log_ftp/: fmp_AAPL_analyst-estimates.json  fmp_AAPL_discounted-cash-flow.json  fmp_AAPL_historical-price-eod_full.json  fmp_AAPL_key-metrics.json  fmp_AAPL_profile.json  fmp_AAPL_ratios.json
old_order_logic/: core.py
resource/: market_report_template.html
services/: analysis.py  analyzer.py  fetcher.py  market_data_api.py  yahoo_finance_api.py
stock_analysis/: __init__.py  data_fetcher.py  plotter.py  screener.py
views/: cli.py  console.py  plotter.py  visualization.py
ydjs_util/: core.py
(+24 files in other folders)
