[project]
name = "alphavi"
version = "3.1.1"
description = "Alphavi is a stock trading framework along with utility libraries of broker APIs and trading logic simplifying all workloads"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.1",
    "brotli==1.2.0",
    "brotlicffi==1.2.0.1",
    "certifi==2026.4.22",
    "contextlib2==21.6.0",
    "cryptography==48.0.0",
    "curl-cffi==0.15.0",
    "flask>=3.1.3",
    "importlib-metadata==9.0.0",
    "matplotlib==3.10.9",
    "mock==5.2.0",
    "mutagen==1.47.0",
    "numpy==2.4.4",
    "pandas==3.0.3",
    "pycryptodome==3.23.0",
    "pyinstaller==6.20.0",
    "python-dotenv==1.2.2",
    "pytz==2026.2",
    "requests==2.34.0",
    "scipy==1.17.1",
    "secretstorage==3.5.0",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "watchdog==6.0.0",
    "websockets==16.0",
    "yfinance==1.3.0",
    "yt-dlp>=2026.3.17",
    "yt-dlp-ejs==0.8.0",
]

[project.scripts]
youtube-downloader = "youtube_downloader.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
